<package>
  <name>trobo_gazebo</name>
  <version>0.1.0</version>
  <description>trobo_gazebo</description>
  <maintainer email="yoneken@ieee.org">Kenta Yonekura</maintainer>

  <license>BSD</license>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>trobo_description</run_depend>
  <run_depend>trobo_control</run_depend> 

  <export>
  </export>
</package>
